* nicer layout for images in projects * left-aligned text in projects * increased size of text in bullet points by 2 px (hopefully no issues on mobile)

--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,15 @@
 	right: 0;
 	min-height: 100%; /* optional: if you want the smallest images to fill the .thumbnail */
 }
+
+.text-left{
+     text-align: left;
+}
+
+.text-center{
+    text-align: center;
+}
+
+li{
+    font-size: 16px;
+}
